# ear

./: CMakeLists.txt  Makefile
include/ear/: buffer.hpp  constants.hpp  device.hpp  graph.hpp  pipe_source.hpp  players.hpp  processor.hpp  server.hpp  sources.hpp
src/: CMakeLists.txt  main.cpp  server.hpp
